# runinator

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  ENHANCEMENTS.md  README.md  build.ps1  runinator-stack.yaml  runinator-supervisor.json  tasks.db
command-center/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
command-center/src/: discovery.rs  main.cpp  main.rs
command-center/src/clients/: api_client.cpp  api_client.h
command-center/src/dialogs/: task_editor_dialog.cpp  task_editor_dialog.h
command-center/src/gossip/: gossip_discovery.cpp  gossip_discovery.h
command-center/src/models/: run_models.cpp  run_models.h  scheduled_task.cpp  scheduled_task.h
command-center/src/utils/: task_validator.h
command-center/src/windows/: main_window.cpp  main_window.h
command-center/ui/: app.slint  mainwindow.slint  models.slint  taskeditor.slint
runinator-api/: Cargo.toml
runinator-api/src/: async_client.rs  blocking_client.rs  error.rs  lib.rs  locator.rs  locator_tests.rs  replicas.rs  types.rs
runinator-archiver/: Cargo.toml
runinator-archiver/src/: config.rs  errors.rs  main.rs  tests.rs
runinator-auth/: Cargo.toml
runinator-auth/src/: lib.rs
runinator-background-worker/: Cargo.toml
runinator-background-worker/src/: config.rs  main.rs
runinator-bootstrap/: Cargo.toml
runinator-bootstrap/src/: main.rs
runinator-broker/: AGENTS.md  Cargo.toml  Dockerfile
runinator-broker/src/: capabilities.rs  dispatch.rs  errors.rs  factory.rs  in_memory.rs  instrumented.rs  lib.rs  tests.rs  types.rs
runinator-broker/src/adapters/: kafka.rs  mod.rs  rabbitmq.rs
runinator-broker/src/http/: auth.rs  client.rs  mod.rs  server.rs  types.rs
runinator-broker/src/tcp/: client.rs  server.rs  types.rs
runinator-broker/src/ws/: client.rs  mod.rs  reconnect.rs  server.rs  types.rs
runinator-broker/tests/: http.rs  kafka.rs  rabbitmq.rs  tcp.rs  ws.rs
runinator-comm/: Cargo.toml
runinator-comm/src/: discovery.rs  errors.rs  lib.rs  targeting.rs  tests.rs  wire.rs  worker_control.rs
runinator-comm/src/discovery/: mod.rs  net.rs  web.rs
runinator-ctl/: Cargo.toml  Dockerfile
runinator-ctl/src/: auth.rs  banner.rs  cli.rs  commands.rs  main.rs  output.rs  pack.rs  params.rs  params_tests.rs
runinator-ctl/src/pack/: tests.rs
runinator-database/: AGENTS.md  Cargo.toml
runinator-database/migrations/mysql/: 20260101000001_init.sql  20260601000001_orchestration_ready_queue.sql  20260605000001_settings.sql  20260607000001_replicas.sql  20260608000001_workflow_semver.sql  20260608000002_replica_version.sql  20260612000001_gates.sql  20260613000001_auth.sql  20260613000002_authz.sql  20260615000001_deliverables.sql  20260616000001_workflow_namespace.sql  20260620000001_dlq_audit.sql  20260621000001_archive_marks.sql  20260622000001_rename_deliverables_to_artifacts.sql  20260630000001_orgs.sql  20260630000002_workflow_org.sql  20260630000003_billing.sql  20260701000001_node_run_prev.sql  20260701000002_replica_samples.sql  20260705000001_replica_ownership.sql  20260709000001_ready_node_indexes.sql  20260710000001_usage_sample_unique.sql  20260713000001_ready_node_announce.sql  20260714000001_pipelines.sql  20260714000002_pipeline_org.sql  20260722000001_pipeline_runs_triggers.sql
runinator-database/migrations/postgres/: 20260101000001_init.sql  20260527000001_default_null_workflow_ids.sql  20260605000001_settings.sql  (+23 more)
runinator-database/src/: archive.rs  backend.rs  common.rs  errors.rs  interfaces.rs  lib.rs  mappers.rs  mappers_tests.rs  mysql.rs  mysql_tests.rs  operations.rs  pool.rs  postgres.rs  queries.rs  sqlite.rs  sqlite_tests.rs
runinator-desktop-agent/: Cargo.toml
runinator-desktop-agent/src/: agent.rs  config.rs  gui.rs  launcher.rs  logging.rs  main.rs  notify.rs  single_instance.rs  tray.rs
runinator-e2e/: Cargo.toml
runinator-e2e/fixtures/: broker-smoke.wdlp
runinator-e2e/src/: lib.rs
runinator-e2e/tests/: rich_workflows.rs  stack_smoke.rs
runinator-engine/: Cargo.toml
runinator-engine/src/: audit.rs  engine.rs  errors.rs  events.rs  lib.rs  loops.rs  loops_tests.rs  repository_state.rs  result_consumer.rs  settings.rs  simulate.rs  stability.rs
runinator-importer/: Cargo.toml  Dockerfile
runinator-importer/src/: config.rs  discovery.rs  main.rs  tests.rs
runinator-importer/tasks/: tasks.json
runinator-importer/workflows/: workflows.json
runinator-lsp/: Cargo.toml  README.md
runinator-lsp/src/: apply.rs  completion.rs  config.rs  diagnostics.rs  document.rs  errors.rs  hover.rs  main.rs  metadata.rs  position.rs  server.rs
runinator-mcp/: Cargo.toml
runinator-mcp/src/: contracts.rs  main.rs  main_tests.rs  protocol.rs  resources.rs  tools.rs
runinator-migration/: Cargo.toml  Dockerfile
runinator-migration/src/: main.rs
runinator-pack/: Cargo.toml
runinator-pack/src/: errors.rs  lib.rs  source.rs
runinator-plugin-console/: Cargo.toml
runinator-plugin-console/src/: ffi.rs  lib.rs  linux.rs  model.rs  runner.rs  windows.rs
runinator-provider-aws/: Cargo.toml
runinator-provider-aws/src/: dynamo.rs  errors.rs  lib.rs  models.rs
runinator-provider-catalog/: Cargo.toml
runinator-provider-catalog/src/: lib.rs  tests.rs
runinator-provider-email/: Cargo.toml
runinator-provider-email/src/: errors.rs  lib.rs  params.rs  send.rs  tests.rs
runinator-provider-local-files/: Cargo.toml
runinator-provider-local-files/src/: errors.rs  lib.rs  params.rs  provider.rs  runner.rs  sandbox.rs  tests.rs
runinator-provider-slack/: Cargo.toml
runinator-provider-slack/src/: errors.rs  lib.rs  read.rs  tests.rs
runinator-provider-sql/: Cargo.toml
runinator-provider-sql/src/: dump.rs  errors.rs  format.rs  helpers.rs  lib.rs  tests.rs
runinator-provider-std/: Cargo.toml
runinator-provider-std/src/: code.rs  errors.rs  intrinsics.rs  lib.rs  provider.rs  tests.rs
runinator-provisioner/: Cargo.toml
runinator-provisioner/src/: errors.rs  factory.rs  kubernetes.rs  lib.rs  supervisor.rs  tests.rs  traits.rs
runinator-reducer/: Cargo.toml
runinator-reducer/src/: config.rs  errors.rs  lib.rs
(+1401 files in other folders)
