[workspace]
resolver = "2"

members = [
    "runinator-command-center/src-tauri",
    "runinator-models",
    "runinator-auth",
    "runinator-pack",
    "runinator-lsp",
    "runinator-reducer",
    "runinator-engine",
    "runinator-database",
    "runinator-db-cli",
    "runinator-provider-support",
    "runinator-bootstrap",
    "runinator-archiver",
    "runinator-waker",
    "runinator-ws",
    "runinator-background-worker",
    "runinator-worker",
    "runinator-desktop-agent",
    "runinator-ctl",
    "runinator-comm",
    "runinator-api",
    "runinator-plugin",
    "runinator-provider-ai",
    "runinator-provider-approval",
    "runinator-provider-aws",
    "runinator-provider-console",
    "runinator-provider-email",
    "runinator-provider-git",
    "runinator-provider-github",
    "runinator-provider-jira",
    "runinator-provider-local-files",
    "runinator-provider-catalog",
    "runinator-provider-slack",
    "runinator-provider-sql",
    "runinator-provider-std",
    "runinator-plugin-console",
    "runinator-utilities",
    "runinator-broker",
    "runinator-supervisor",
    "runinator-provisioner",
    "runinator-mcp",
    "runinator-workflows",
    "runinator-wdl",
    "runinator-e2e",
    "xtask"
]
