[package]
name = "command-center"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
runinator-api = { path = "../runinator-api" }
runinator-models = { path = "../runinator-models" }
runinator-comm = { path = "../runinator-comm" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
