[package]
name = "runinator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
runinator-comm = { path = "../runinator-comm" }
runinator-models = { path = "../runinator-models" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
url = "2"
