[package]
name = "runinator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "blocking"] }
runinator-comm = { path = "../runinator-comm" }
runinator-models = { path = "../runinator-models" }
runinator-utilities = { path = "../runinator-utilities" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["sync", "time", "rt"] }
url = "2"
uuid = { version = "1.18", features = ["v4"] }
