[package]
name = "runinator-archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1"
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
uuid = { version = "1.18", features = ["v4"] }

runinator-api = { path = "../runinator-api" }
runinator-database = { path = "../runinator-database" }
runinator-db-cli = { path = "../runinator-db-cli" }
runinator-models = { path = "../runinator-models" }
runinator-utilities = { path = "../runinator-utilities" }
