[package]
name = "runinator-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4"] }
runinator-models = { path = "../runinator-models" }
