[package]
name = "runinator-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

runinator-database = { path = "../runinator-database" }
runinator-db-cli = { path = "../runinator-db-cli" }
runinator-models = { path = "../runinator-models" }
runinator-utilities = { path = "../runinator-utilities" }

[[bin]]
name = "runinator-bootstrap"
path = "src/main.rs"
