[package]
name = "runinator-broker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "runinator-broker"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", default-features = false, features = ["json", "tokio", "http1"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
runinator-comm = { path = "../runinator-comm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
runinator-models = { path = "../runinator-models" }

[features]
kafka = []
rabbitmq = []
