[package]
name = "runinator-broker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "runinator-broker"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", default-features = false, features = ["json", "tokio", "http1"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rdkafka = { version = "0.39", features = ["cmake-build"], optional = true }
lapin = { version = "4.9.1", optional = true }
futures-util = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
opentelemetry = "0.32"
runinator-auth = { path = "../runinator-auth" }
runinator-comm = { path = "../runinator-comm" }
runinator-models = { path = "../runinator-models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
kafka = ["dep:rdkafka"]
rabbitmq = ["dep:lapin", "dep:futures-util", "dep:log"]
