[package]
name = "runinator-comm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
runinator-models = { path = "../runinator-models" }
log = "0.4"
tokio = { version = "1", features = ["net", "rt", "time"] }
