[package]
name = "runinator-ctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runinatorctl"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
runinator-api = { path = "../runinator-api" }
runinator-models = { path = "../runinator-models" }
runinator-wdl = { path = "../runinator-wdl" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
