[package]
name = "runinator-database"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
log = "0.4"
futures-util = "0.3.31"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "runtime-tokio-native-tls", "macros"] }

runinator-models = { path = "../runinator-models" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
