[package]
name = "runinator-database"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
croner = "3.0.1"
log = "0.4"
futures-util = "0.3.31"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "mysql", "runtime-tokio-native-tls", "macros", "migrate", "uuid"] }
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }

runinator-auth = { path = "../runinator-auth" }
runinator-models = { path = "../runinator-models" }
runinator-comm = { path = "../runinator-comm" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
