[package]
name = "runinator-desktop-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
eframe = "0.29"
tray-icon = "0.24"
open = "5"

runinator-api = { path = "../runinator-api" }
runinator-broker = { path = "../runinator-broker", features = ["ws"] }
runinator-comm = { path = "../runinator-comm" }
runinator-models = { path = "../runinator-models" }
runinator-plugin = { path = "../runinator-plugin" }
runinator-provider-catalog = { path = "../runinator-provider-catalog" }
runinator-provider-local-files = { path = "../runinator-provider-local-files" }
runinator-utilities = { path = "../runinator-utilities" }
runinator-worker = { path = "../runinator-worker" }
