[package]
name = "runinator-e2e"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
runinator-api = { path = "../runinator-api" }
runinator-models = { path = "../runinator-models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
