[package]
name = "runinator-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4"] }
tracing = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
opentelemetry = "0.32"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

runinator-broker = { path = "../runinator-broker" }
runinator-reducer = { path = "../runinator-reducer" }
runinator-database = { path = "../runinator-database" }
runinator-models = { path = "../runinator-models" }
runinator-comm = { path = "../runinator-comm" }
runinator-utilities = { path = "../runinator-utilities" }
runinator-workflows = { path = "../runinator-workflows" }

[features]
kafka = ["runinator-broker/kafka"]
rabbitmq = ["runinator-broker/rabbitmq"]
# exposes in-crate test hooks (forced-failure injection, small test helpers) to downstream crates
# so their integration tests can drive engine behavior. enabled only via dev-dependencies.
test-support = []
