[package]
name = "runinator-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
uuid = { version = "1.18", features = ["v4"] }
async-trait = "0.1"

runinator-comm = { path = "../runinator-comm" }
runinator-models = { path = "../runinator-models" }
runinator-api = { path = "../runinator-api" }
runinator-wdl = { path = "../runinator-wdl" }
runinator-utilities = { path = "../runinator-utilities" }
runinator-plugin = { path = "../runinator-plugin" }
runinator-provider-ai = { path = "../runinator-provider-ai" }
runinator-provider-approval = { path = "../runinator-provider-approval" }
runinator-provider-aws = { path = "../runinator-provider-aws" }
runinator-provider-console = { path = "../runinator-provider-console" }
runinator-provider-email = { path = "../runinator-provider-email" }
runinator-provider-git = { path = "../runinator-provider-git" }
runinator-provider-github = { path = "../runinator-provider-github" }
runinator-provider-jira = { path = "../runinator-provider-jira" }
runinator-provider-slack = { path = "../runinator-provider-slack" }
runinator-provider-sql = { path = "../runinator-provider-sql" }

[dev-dependencies]
runinator-workflows = { path = "../runinator-workflows" }
