[package]
name = "runinator-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls"] }
runinator-models = { path = "../runinator-models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
