[package]
name = "runinator-pack"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
runinator-models = { path = "../runinator-models" }
runinator-utilities = { path = "../runinator-utilities" }
runinator-wdl = { path = "../runinator-wdl" }
serde_json = "1"
thiserror = "2.0.18"
