[package]
name = "runinator-plugin-console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
log = "0.4"
ctor = "0.2.9"
winapi = { version = "0.3.9", features = ["wincon", "consoleapi"] }
serde = { version = "1.0", features = ["derive"] }

runinator-plugin = { path = "../runinator-plugin" }
runinator-utilities = { path = "../runinator-utilities" }