[package]
name = "runinator-plugin-console"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
log = "0.4"
winapi = { version = "0.3.9", features = ["wincon", "consoleapi"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

runinator-models = { path = "../runinator-models" }
runinator-plugin = { path = "../runinator-plugin" }
runinator-utilities = { path = "../runinator-utilities" }
