[package]
name = "runinator-provider-aws"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
aws-config = "1.1"
aws-sdk-dynamodb = "1.16"
base64 = "0.22"

runinator-plugin = { path = "../runinator-plugin" }
runinator-utilities = { path = "../runinator-utilities" }
runinator-models = { path = "../runinator-models" }
