[package]
name = "runinator-provider-catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
runinator-models = { path = "../runinator-models" }
runinator-plugin = { path = "../runinator-plugin" }
runinator-provider-ai = { path = "../runinator-provider-ai" }
runinator-provider-approval = { path = "../runinator-provider-approval" }
runinator-provider-aws = { path = "../runinator-provider-aws" }
runinator-provider-console = { path = "../runinator-provider-console" }
runinator-provider-email = { path = "../runinator-provider-email" }
runinator-provider-git = { path = "../runinator-provider-git" }
runinator-provider-github = { path = "../runinator-provider-github" }
runinator-provider-jira = { path = "../runinator-provider-jira" }
runinator-provider-slack = { path = "../runinator-provider-slack" }
runinator-provider-sql = { path = "../runinator-provider-sql" }
runinator-provider-std = { path = "../runinator-provider-std" }
