[package]
name = "runinator-provider-email"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "rustls-tls",
    "builder",
    "tokio1-rustls-tls"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

runinator-plugin = { path = "../runinator-plugin" }
runinator-models = { path = "../runinator-models" }
