[package]
name = "runinator-provider-local-files"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2"

runinator-plugin = { path = "../runinator-plugin" }
runinator-models = { path = "../runinator-models" }
runinator-provider-support = { path = "../runinator-provider-support" }
