[package]
name = "runinator-provider-slack"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "blocking"] }

runinator-plugin = { path = "../runinator-plugin" }
runinator-models = { path = "../runinator-models" }

[dev-dependencies]
uuid = { version = "1.18", features = ["v4", "v7"] }
