[package]
name = "runinator-provider-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
hex = "0.4"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }

runinator-plugin = { path = "../runinator-plugin" }
runinator-utilities = { path = "../runinator-utilities" }
runinator-models = { path = "../runinator-models" }
