[package]
name = "runinator-provider-std"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "blocking"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }

runinator-plugin = { path = "../runinator-plugin" }
runinator-models = { path = "../runinator-models" }
runinator-workflows = { path = "../runinator-workflows" }
