[package]
name = "runinator-provisioner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
log = "0.4"
runinator-models = { path = "../runinator-models" }
runinator-supervisor = { path = "../runinator-supervisor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

kube = { version = "0.99", default-features = false, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.24", features = ["latest"], optional = true }

[features]
default = []
# the kubernetes backend pulls in the kube-rs client tree; enable it for cloud builds.
kubernetes = ["dep:kube", "dep:k8s-openapi"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
