[package]
name = "runinator-reducer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }

runinator-comm = { path = "../runinator-comm" }
runinator-database = { path = "../runinator-database" }
runinator-models = { path = "../runinator-models" }
runinator-utilities = { path = "../runinator-utilities" }
runinator-workflows = { path = "../runinator-workflows" }
